# PyEarthData

./: .buildinfo  .gitignore  LICENSE  README.md  airs.html  changelog.md  data_collection.ipynb  genindex.html  index.html  objects.inv  power.html  py-modindex.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: deploy-docs.yml  pypi.yml
MarinePySim/: __init__.py  giovanni.py  ocean.py  utils.py
MarinePySim/airs/: __init__.py  airs.py
MarinePySim/ocean/: __init__.py  ocean.py
_modules/: index.html
_modules/pyearthdata/: airs.html  power.html
_sources/: airs.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst  power.rst
notebooks/: 106656-co-occurrence-preliminary-analysis.ipynb  106656-depth-function-analysis.ipynb  README.md  ayush's_analysis.ipynb  ayush-s-analysis.ipynb  data_collection.ipynb  dataviz.ipynb
pyearthdata/: __init__.py  _version.py  airs.py  power.py  utils.py
