[metadata]
name = MarinePySim
description = Python Simulator for dissolved Ocean gases and Marine Species Analysis
author = Ayush Anand
author_email = kingwarrior880@gmail.com
url = https://github.com/ayushanand18/ocean-research-py
long_description_content_type = text/md
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
    Documentation = https://github.com/ayushanand18/ocean-research-py
    Bug Tracker = https://github.com/ayushanand18/ocean-research-py
    Source Code = https://github.com/ayushanand18/ocean-research-py
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Geo-Informatics

[options]
install_requires =
    requests>2.7
python_requires = >=3.7
packages = find:
