[metadata]
name = PyEarthData
description = Python Package for grabbing earth surface and atmosphere data
author = Ayush Anand
url = https://github.com/ayushanand18/ocean-research-py
long_description_content_type = text/md
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
    Documentation = https://github.com/ayushanand18/ocean-research-py
    Bug Tracker = https://github.com/ayushanand18/ocean-research-py
    Source Code = https://github.com/ayushanand18/ocean-research-py
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Geo-Informatics

[options]
install_requires =
    requests>2.7
python_requires = >=3.7
packages = find:
