[metadata]
name = PyEarthData
description = Python Package for grabbing earth surface and atmosphere data
author = Ayush Anand
url = https://github.com/ayushanand18/PyEarthData
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_files = LICENSE
project_urls =
    Documentation = https://ayushanand18.github.io/PyEarthData
    Bug Tracker = https://github.com/ayushanand18/PyEarthData/issues
    Source Code = https://github.com/ayushanand18/PyEarthData
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
install_requires =
    requests>2.7
python_requires = >=3.7
packages = find:
